--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,10 @@
     <title>
       Loyalti
     </title>
-    <style>
-      a {
-        cursor: pointer;
-      }
-      .help-block {
-        font-size: 12px;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
