--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>
       Loyalti
     </title>
@@ -11,6 +15,6 @@
     />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" className="container-fluids"></div>
   </body>
 </html>
