--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     />
   </head>
   <body>
-    <div id="app" className="container-fluids"></div>
+    <div id="root" className="container-fluids"></div>
   </body>
 </html>
