--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <title>
       Loyalti
     </title>
+
     <link
-      href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700|Open+Sans:300,400,600,700&display=swap"
       rel="stylesheet"
     />
   </head>
